develop/wip -> swagger ui doesn't work
