# internal/transport/gateway/server.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"fmt"
 	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
+	httpSwagger "github.com/swaggo/http-swagger/v2"
 	"github.com/zenorachi/url-shortener/internal/transport/grpc/handler"
 	"github.com/zenorachi/url-shortener/pkg/api"
 	"net"
@@ -39,6 +40,12 @@ func (s *Server) ListenAndServer(network, host, port string) error {
 
 	mux := http.NewServeMux()
 	mux.Handle("/", s.grpcMux)
+
+	prefix := "/docs/"
+
+	fileServer := httpSwagger.Handler(httpSwagger.URL("/docs/url-shortener.swagger.json"))
+
+	mux.Handle(prefix, http.StripPrefix(prefix, fileServer))
 
 	if err = http.Serve(lis, mux); err != nil {
 		return err
